# calib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
apps/imgui-frontend/: CMakeLists.txt  imgui.ini  main.cpp
apps/imgui-frontend/include/ui_frontend/canvas/: canvas.h  drawable.h  framebuffer_shader.h
apps/imgui-frontend/include/ui_frontend/utils/: shader.h
apps/imgui-frontend/include/ui_frontend/utils/logger/: dear_sink.h  logger.h
apps/imgui-frontend/shaders/: cube.fs  cube.vs  shader_axis.fs  shader_axis.vs  shader_mesh.fs  shader_point.fs  shader_point.vs  shader_triangle.fs  shader_triangle.vs
apps/imgui-frontend/src/utils/logger/: dear_sink.cpp
apps/shaders/: shader_axis.fs  shader_axis.vs  shader_mesh.fs  shader_mesh.vs  shader_point.fs  shader_point.vs
apps/test/: CMakeLists.txt  test_logger_gui.cpp
apps/ui/: mainwindow.ui
apps/widget/: points.cpp  points.h
cmake/: ceres_fetch_compile.cmake  eigen_fetch_compile.cmake
notebook/: test_calib.ipynb  test_cam_synthetic.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/include/backend/camera/models/: cam_model.hpp  ftheta.hpp  mei.hpp  pinhole.hpp
src/backend/src/camera/: vcam.hpp
src/backend/src/camera/rect/: rectify.hpp
src/core/: CMakeLists.txt  core.cpp
src/core/include/calib/sensors/cam/: cam.hpp
src/core/include/calib/types/: images.hpp
src/core/include/calib/types/base/: base.hpp  geometry.hpp  math.hpp  timestamp.hpp
src/core/pattern_detect/: opencv_checkboard.cpp
src/frontend/: CMakeLists.txt
src/include/calib/core/camera/models/: cam.hpp  cam_model.hpp  ftheta.hpp  pinhole.hpp
src/include/calib/core/optimize/: project_error.hpp
src/include/calib/core/pattern_detect/: opencv_checkboard.hpp  pattern_detector.hpp
src/include/calib/types/: images.hpp
src/include/calib/types/base/: base.hpp  geometry.hpp  math.hpp  timestamp.hpp
src/utils/: CMakeLists.txt
src/utils/cmdline/: CMakeLists.txt  cmdline.h
src/utils/include/calib/utils/: cmdline.hpp  filesystem.hpp  thread_pool.hpp
src/utils/include/calib/utils/logger/: logger.h
src/utils/include/calib/utils/marco/: marco.hpp
src/utils/include/calib/utils/timer/: testtime.hpp  timer.hpp
src/utils/include/utils/: cmdline.hpp  filesystem.hpp
src/utils/include/utils/marco/: marco.hpp
src/utils/logger/: log.hpp
src/utils/src/: timer.cpp
src/utils/thread_pool/: CMakeLists.txt  thread_pool.hpp
src/utils/timer/: CMakeLists.txt
src/utils/timer/include/: testtime.hpp  timer.hpp
src/utils/timer/src/: timer.cpp
src/utils/timer/test/: test_timer.cpp
test/: CMakeLists.txt  capture.cpp  create_cv_churo_board.cpp  stereo_img_proc.hpp  test_base_type.cpp  test_cam_type.cpp  test_checkboard_detect.cpp  test_curve_fit.cpp  test_cv_stereo_matching.cpp  test_logger.cpp  v4l2_interface.hpp
