set(COMPONENT_NAME backend)
add_library(${COMPONENT_NAME} INTERFACE)
add_library(${PROJECT_NAME}::${COMPONENT_NAME} ALIAS ${COMPONENT_NAME})

target_include_directories(${COMPONENT_NAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
    $<INSTALL_INTERFACE:${PROJECT_NAME}>
)

target_link_libraries(${COMPONENT_NAME} INTERFACE ${PROJECT_NAME}::utils)

install(
  TARGETS ${COMPONENT_NAME} 
  EXPORT  ${COMPONENT_NAME}Config
  ARCHIVE
  LIBRARY
  COMPONENT ${COMPONENT_NAME} 
)

install(DIRECTORY include DESTINATION ${PROJECT_NAME})

install(
  EXPORT ${COMPONENT_NAME}Config
  DESTINATION lib/cmake/${PROJECT_NAME}
  NAMESPACE ${PROJECT_NAME}::
  FILE ${COMPONENT_NAME}Config.cmake
  COMPONENT ${COMPONENT_NAME} 
)

